# YAGSDB

./: .gitignore  Cargo.toml  README.md  build.rs  config-schema.json  config.example.yaml
.github/workflows/: rust.yml
src/: config.rs  db.rs  git.rs  github.rs  main.rs  search.rs
src/events/: channel_update.rs  message.rs  mod.rs  ready.rs  sync.rs  thread_delete.rs  thread_update.rs
src/utils/: sync.rs
