[package]
name = "YAGSDB"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.150"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.13.1"

[build-dependencies]
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.150"
